# HomeScripts

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  ruff.yml
api/decorators/: index.html
api/funcs/: index.html
py3/: pixel_color_picker.py
search/: search_index.json
src/docs/: index.md  requirements.txt
src/docs/api/: decorators.md  funcs.md
src/home_utils/: __init__.py  _version.py  decorators.py  funcs.py
win/: clear_py_cache.bat
